# xlang-mlir

./: .clang-tidy  CMakeLists.txt  format-cpp.sh
calc-opt/: CMakeLists.txt  main.cpp
codegen/: CMakeLists.txt  NativeCodeGen.cpp  main.cpp
examples/: basic.calc
include/: CMakeLists.txt
include/Calc/: CMakeLists.txt  CalcDialect.h  CalcDialect.td  CalcOps.h  CalcOps.td  NativeCodeGen.h
include/XLang/: CMakeLists.txt  NativeCodeGen.h  XLangDialect.h  XLangDialect.td  XLangOps.h  XLangOps.td
lib/: CMakeLists.txt
lib/Calc/: CMakeLists.txt  CalcDialect.cpp  CalcOps.cpp
lib/CodeGen/: CMakeLists.txt  NativeCodeGen.cpp
lib/Dialect/: CMakeLists.txt  XLangDialect.cpp  XLangOps.cpp
parser/: CMakeLists.txt  grammar.h  main.cpp
